--- a/src/app.html
+++ b/src/app.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- This is the set up for the website Tailwind and skeleton are used -->
 <html lang="en" class="light">
 	<head>
 		<meta charset="utf-8" />
